<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoutesForm">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="117dp"
        android:layout_height="89dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="6dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/LinearLayout02"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toEndOf="@+id/linearLayout7"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.886">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/notesButton"
                android:drawableLeft="@drawable/icons8_edit_30"
                android:background="@drawable/routes_list_start_button_states"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/note"
                android:textAllCaps="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="119dp"
            android:layout_height="39dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/difficultySpinner"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="2dp"
                android:entries="@array/difficulties"
                android:spinnerMode="dropdown" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="286dp"
        android:layout_height="266dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="560dp"
            android:layout_height="104dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="121dp"
                android:layout_height="94dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="101dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="22dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"></LinearLayout>

                    <TextView
                        android:id="@+id/routeNameView"
                        android:layout_width="105dp"
                        android:layout_height="35dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/actor"
                        android:text="@string/route_name" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal"></LinearLayout>

                    <TextView
                        android:id="@+id/startingPView"
                        android:layout_width="104dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/actor"
                        android:text="@string/starting_point" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="166dp"
                android:layout_height="106dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/routeNameEditText"
                        android:layout_width="158dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/startingPEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dateView"
                    android:layout_width="12dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/actor"
                    android:text="@string/date" />

                <TextView
                    android:id="@+id/dateDisplayTextView"
                    android:layout_width="52dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:onClick="openSetDate"
                    android:textColor="#2196F3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/durationView"
                    android:layout_width="40dp"
                    android:layout_height="21dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/actor"
                    android:text="@string/duration" />

                <LinearLayout
                    android:layout_width="84dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/minutesEditText"
                        android:layout_width="68dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="0dp"
                        android:layout_marginRight="0dp"
                        android:layout_weight="3"
                        android:ems="10"
                        android:inputType="number"
                        android:maxLength="4"
                        android:textColor="#2196F3"
                        android:visibility="visible"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/colonView"
                        android:layout_width="14dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="0dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text=":"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/secondsEditText"
                        android:layout_width="63dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="0dp"
                        android:layout_marginRight="0dp"
                        android:layout_weight="3"
                        android:ems="10"
                        android:inputType="number"
                        android:maxLength="2"
                        android:textColor="#2196F3"
                        android:textColorLink="#002196F3"
                        android:visibility="visible"
                        app:layout_constraintEnd_toEndOf="parent" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="17dp"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="284dp"
            android:layout_height="83dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="137dp"
                android:layout_height="72dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/stepsView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/actor"
                    android:gravity="center"
                    android:text="@string/steps"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="11dp"
                    android:orientation="horizontal"></LinearLayout>

                <TextView
                    android:id="@+id/stepsNumView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="13dp"
                android:layout_height="76dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/distanceView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/actor"
                    android:gravity="center"
                    android:text="@string/distance"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="11dp"
                    android:orientation="horizontal">

                </LinearLayout>

                <TextView
                    android:id="@+id/distanceNumView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18sp" />

            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="318dp"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.913">

        <Button
            android:id="@+id/SaveButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/routes_list_start_button_states"
            android:text="@string/save"></Button>

        <Button
            android:id="@+id/CancelButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/routes_list_start_button_states"
            android:text="@string/cancel"></Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="179dp"
        android:layout_height="87dp"
        android:layout_marginStart="5dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/LinearLayout02"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.872">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/flatOrHillyButton"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="#2196F3"
                android:fontFamily="@font/actor"
                android:text="ToggleButton"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textOff="@string/hilly"
                android:textOn="@string/flat"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="73dp"
                android:layout_weight="1"
                android:orientation="horizontal"></LinearLayout>

            <ToggleButton
                android:id="@+id/loopOrOutBackButton"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="#2196F3"
                android:fontFamily="@font/actor"
                android:text="ToggleButton"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textOff="@string/out_back"
                android:textOn="@string/loop"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/streetOrTrailButton"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="#2196F3"
                android:fontFamily="@font/actor"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textOff="@string/trail"
                android:textOn="@string/street"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="73dp"
                android:layout_weight="1"
                android:orientation="horizontal"></LinearLayout>

            <ToggleButton
                android:id="@+id/evenOrUnevenButton"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:background="#2196F3"
                android:fontFamily="@font/actor"
                android:text="ToggleButton"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textOff="@string/uneven"
                android:textOn="@string/even"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>